--- a/config.json
+++ b/config.json
@@ -1,10 +1,15 @@
 {
-    "address": "1054913431",
-    "wd": false,
-    "ads": true,
-    "thread_ads": 30,
-    "thread": 1,
-    "proxy": false,
-    "delay_account_switch": 10,
-    "delay_loop": 3000
+  "proxy": false,
+  "thread_ads": 3,
+  "ads": true,
+  "wd": false,
+  "address": "YOUR_WITHDRAW_ADDRESS",
+
+  "auto_next_day": true,
+  "reset_time": "00:00",
+  "reset_timezone": "local",
+  "human_delay": [1.5, 3.0],
+  "progress_bar_width": 20,
+
+  "max_concurrent": 2
 }
